# legacy-notepad-add-lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pr9.patch
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp  notepad.rc  resource.h
src/core/: globals.cpp  globals.h  types.h
src/lang/: en.h  ja.h  lang.cpp  lang.h
src/modules/: commands.cpp  commands.h  dialog.cpp  editor.cpp  file.cpp  menu.cpp  menu.h  settings.cpp  theme.cpp  ui.cpp
